# OrinFlow_Kernel

./: .gitignore  CMakeLists.txt  requirements.txt  setup.py
3rd/: update-cutlass.sh
benchmark/: bench_reduce.py
ofk/: __init__.py
src/add/: add.cu  entry.cc
src/attn/: entry.cc  flash_attn_v2.cu
src/gemm/: entry.cc  gemm.cu  gemm_cute.cu  gemm_tile.cu
src/reduce/: entry.cc  reduce.cu
src/softmax/: entry.cc  softmax.cu
tests/: test_add.py  test_attn.py  test_gemm.py  test_reduce.py  test_softmax.py
